Fixing the alignment of the heart

--- a/src/App.css
+++ b/src/App.css
@@ -154,3 +154,10 @@ article {
 .show {
   display: block;
 }
+@media (max-width: 800px) { 
+  .heart-btn {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
